# fullstack-mvp-filehosting

./: .gitignore  docker-compose.dev.yml  docker-compose.yml  nginx.conf
backend/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/migrations/: env.py
backend/src/: app.py  config.py  constants.py  database.py
backend/src/models/: alert.py  file.py
backend/src/routers/: alerts.py  files.py
backend/src/schemas/: alert.py  base.py  file.py
backend/src/services/: alert_service.py  file_service.py
backend/src/tasks/: __init__.py  celery_app.py
backend/src/tasks/alert_tasks/: __init__.py  send.py
backend/src/tasks/file_tasks/: __init__.py  metadata.py  threats.py
frontend/: .env  README.md  next.config.ts  package-lock.json  package.json
frontend/src/: constants.ts  global.d.ts
frontend/src/api/: alertsApi.ts  baseQuery.ts  filesApi.ts
frontend/src/app/: files.header.test.tsx  files.header.tsx  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/enums/: alert.ts  file.ts  ui.ts
frontend/src/entities/: alert.ts  file.ts
frontend/src/features/: store.ts
frontend/src/features/alerts/: alertsHook.ts  alertsSlice.ts
frontend/src/features/files/: filesHook.ts  filesSlice.ts
frontend/src/providers/: AppInitProvider.tsx  StoreProvider.tsx
frontend/src/shared/components/: RTitleBadge.test.tsx  RTitleBadge.tsx
frontend/src/shared/components/RDialog/: index.tsx
frontend/src/shared/components/RTable/: index.module.scss  index.test.tsx  index.tsx
frontend/src/utils/: general.test.ts  general.ts
